# tcup-paper

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  conda-environment.yaml  datasets.tex  docker_run.sh  main.tex  pyproject.toml  rasti.bst  rasti.cls  readme.txt  references.bib  requirements.in  requirements.txt
.github/workflows/: pull-request.yaml  pull-request.yml
graphics/scripts/: gen_data.py  run_models.py
hpc-scripts/: analyse_fixed.sh  bash.sh  coordinate_fixed_analysis.sh  fixed.sh  fixed.test.sh  orchestrate_fixed.sh  orchestrate_sbc.sh  orchestrate_sbc_analysis.sh  plot_fixed.sh  plot_sbc.sh  sbc.sh  tarball-sbc.sh
linmix/: Dockerfile  run_Kelly.py  run_mcmc.py
scripts/: build_templates.py  check_ci.py  combine_fixed.py  combine_many.py  combine_prior.py  fit_many.py  fit_many_outlier.py  fit_model.py  fit_normal.py  fit_sbc.py  gen_data.py  gen_dataset.py  gen_sbc_dataset.py  plot_corner.py  plot_corner_ncup.py  plot_corner_tcup.py  plot_dag.py  plot_fixed.py  plot_many.py  plot_many_combined.py  plot_many_compare.py  plot_mixture_prior.py  plot_multi_sbc.py  plot_outlier_frac.py  plot_pdfs.py  plot_posterior_sd.py  plot_regression.py  plot_sbc.py  plot_t_dist.py  postprocess_linmix.py  preprocess_Kelly.py  preprocess_Park.py  robust_plot_corner_ncup.py  robust_plot_corner_tcup.py  run_models.py  sbc_visualiser.py  summarise_many.py  summarise_mcmc.py
tcup-paper/data/: gaussian_mix.py  io.py  lognormal.py  outlier.py  sbc.py  t.py
tcup-paper/plot/: style.py  (+2 more)
templates/: datasets.tex
tests/: test_dataset.py  test_prior.py
(+16 files in other folders)
